// Code generated by furo-proto-gen. DO NOT EDIT.
syntax = "proto3";
package helloworld;
option go_package = "github.com/yourname/sample-specs/dist/pb/enums;enumspb";
option java_multiple_files = true;
option java_outer_classname = "EnumsProto";
option java_package = "com.example.tutorial.enums";

// xxxx
enum Corpus {
  option allow_alias = true;
  UNKNOWN = 0;
  COMPLETE = 2;
  STARTED = 1;
  RUNNING = 1;
}

// ssssssd
enum Secondenum {
  SUNKNOWN = 0;
  SSTARTED = 1;
  SCOMPLETE = 2;
}
